parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> regra
Rule 1     regra -> INICIO varlist MONITOR monitorar EXECUTE cmds TERMINO
Rule 2     cmds -> cmd
Rule 3     cmds -> cmd cmds
Rule 4     cmd -> variavel IGUAL numero
Rule 5     cmd -> variavel IGUAL variavel
Rule 6     cmd -> funcao
Rule 7     cmd -> IF condicao THEN cmds FIM
Rule 8     cmd -> IF condicao THEN cmds ELSE cmds FIM
Rule 9     cmd -> ENQUANTO condicao FACA cmds FIM
Rule 10    cmd -> EVAL ABRE variavel VIRGULA variavel VIRGULA cmds FECHA
Rule 11    cmd -> EVAL ABRE numero VIRGULA numero VIRGULA cmds FECHA
Rule 12    funcao -> SOMA ABRE variavel VIRGULA variavel VIRGULA variavel FECHA
Rule 13    funcao -> SOMA ABRE variavel VIRGULA numero VIRGULA variavel FECHA
Rule 14    funcao -> SOMA ABRE numero VIRGULA variavel VIRGULA variavel FECHA
Rule 15    funcao -> SOMA ABRE numero VIRGULA numero VIRGULA variavel FECHA
Rule 16    funcao -> MULT ABRE numero VIRGULA numero VIRGULA variavel FECHA
Rule 17    funcao -> MULT ABRE variavel VIRGULA variavel VIRGULA variavel FECHA
Rule 18    funcao -> MULT ABRE variavel VIRGULA numero VIRGULA variavel FECHA
Rule 19    funcao -> MULT ABRE numero VIRGULA variavel VIRGULA variavel FECHA
Rule 20    funcao -> ZERO ABRE variavel FECHA
Rule 21    condicao -> numero MAIOR variavel
Rule 22    condicao -> numero MENOR variavel
Rule 23    condicao -> numero IGUAL IGUAL variavel
Rule 24    condicao -> variavel IGUAL IGUAL variavel
Rule 25    condicao -> variavel IGUAL IGUAL numero
Rule 26    condicao -> variavel MAIOR variavel
Rule 27    condicao -> variavel MENOR variavel
Rule 28    condicao -> variavel MAIOR numero
Rule 29    condicao -> variavel MENOR numero
Rule 30    condicao -> variavel
Rule 31    monitorar -> variavel
Rule 32    monitorar -> variavel VIRGULA monitorar
Rule 33    varlist -> variavel
Rule 34    varlist -> variavel VIRGULA varlist

Terminals, with rules where they appear

ABRE                 : 10 11 12 13 14 15 16 17 18 19 20
ELSE                 : 8
ENQUANTO             : 9
EVAL                 : 10 11
EXECUTE              : 1
FACA                 : 9
FECHA                : 10 11 12 13 14 15 16 17 18 19 20
FIM                  : 7 8 9
IF                   : 7 8
IGUAL                : 4 5 23 23 24 24 25 25
INICIO               : 1
MAIOR                : 21 26 28
MENOR                : 22 27 29
MONITOR              : 1
MULT                 : 16 17 18 19
SOMA                 : 12 13 14 15
TERMINO              : 1
THEN                 : 7 8
VIRGULA              : 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 32 34
ZERO                 : 20
error                : 
numero               : 4 11 11 13 14 15 15 16 16 18 19 21 22 23 25 28 29
variavel             : 4 5 5 10 10 12 12 12 13 13 14 14 15 16 17 17 17 18 18 19 19 20 21 22 23 24 24 25 26 26 27 27 28 29 30 31 32 33 34

Nonterminals, with rules where they appear

cmd                  : 2 3
cmds                 : 1 3 7 8 8 9 10 11
condicao             : 7 8 9
funcao               : 6
monitorar            : 1 32
regra                : 0
varlist              : 1 34

Parsing method: LALR

state 0

    (0) S' -> . regra
    (1) regra -> . INICIO varlist MONITOR monitorar EXECUTE cmds TERMINO

    INICIO          shift and go to state 2

    regra                          shift and go to state 1

state 1

    (0) S' -> regra .



state 2

    (1) regra -> INICIO . varlist MONITOR monitorar EXECUTE cmds TERMINO
    (33) varlist -> . variavel
    (34) varlist -> . variavel VIRGULA varlist

    variavel        shift and go to state 4

    varlist                        shift and go to state 3

state 3

    (1) regra -> INICIO varlist . MONITOR monitorar EXECUTE cmds TERMINO

    MONITOR         shift and go to state 5


state 4

    (33) varlist -> variavel .
    (34) varlist -> variavel . VIRGULA varlist

    MONITOR         reduce using rule 33 (varlist -> variavel .)
    VIRGULA         shift and go to state 6


state 5

    (1) regra -> INICIO varlist MONITOR . monitorar EXECUTE cmds TERMINO
    (31) monitorar -> . variavel
    (32) monitorar -> . variavel VIRGULA monitorar

    variavel        shift and go to state 8

    monitorar                      shift and go to state 7

state 6

    (34) varlist -> variavel VIRGULA . varlist
    (33) varlist -> . variavel
    (34) varlist -> . variavel VIRGULA varlist

    variavel        shift and go to state 4

    varlist                        shift and go to state 9

state 7

    (1) regra -> INICIO varlist MONITOR monitorar . EXECUTE cmds TERMINO

    EXECUTE         shift and go to state 10


state 8

    (31) monitorar -> variavel .
    (32) monitorar -> variavel . VIRGULA monitorar

    EXECUTE         reduce using rule 31 (monitorar -> variavel .)
    VIRGULA         shift and go to state 11


state 9

    (34) varlist -> variavel VIRGULA varlist .

    MONITOR         reduce using rule 34 (varlist -> variavel VIRGULA varlist .)


state 10

    (1) regra -> INICIO varlist MONITOR monitorar EXECUTE . cmds TERMINO
    (2) cmds -> . cmd
    (3) cmds -> . cmd cmds
    (4) cmd -> . variavel IGUAL numero
    (5) cmd -> . variavel IGUAL variavel
    (6) cmd -> . funcao
    (7) cmd -> . IF condicao THEN cmds FIM
    (8) cmd -> . IF condicao THEN cmds ELSE cmds FIM
    (9) cmd -> . ENQUANTO condicao FACA cmds FIM
    (10) cmd -> . EVAL ABRE variavel VIRGULA variavel VIRGULA cmds FECHA
    (11) cmd -> . EVAL ABRE numero VIRGULA numero VIRGULA cmds FECHA
    (12) funcao -> . SOMA ABRE variavel VIRGULA variavel VIRGULA variavel FECHA
    (13) funcao -> . SOMA ABRE variavel VIRGULA numero VIRGULA variavel FECHA
    (14) funcao -> . SOMA ABRE numero VIRGULA variavel VIRGULA variavel FECHA
    (15) funcao -> . SOMA ABRE numero VIRGULA numero VIRGULA variavel FECHA
    (16) funcao -> . MULT ABRE numero VIRGULA numero VIRGULA variavel FECHA
    (17) funcao -> . MULT ABRE variavel VIRGULA variavel VIRGULA variavel FECHA
    (18) funcao -> . MULT ABRE variavel VIRGULA numero VIRGULA variavel FECHA
    (19) funcao -> . MULT ABRE numero VIRGULA variavel VIRGULA variavel FECHA
    (20) funcao -> . ZERO ABRE variavel FECHA

    variavel        shift and go to state 14
    IF              shift and go to state 16
    ENQUANTO        shift and go to state 17
    EVAL            shift and go to state 18
    SOMA            shift and go to state 19
    MULT            shift and go to state 20
    ZERO            shift and go to state 21

    cmds                           shift and go to state 12
    cmd                            shift and go to state 13
    funcao                         shift and go to state 15

state 11

    (32) monitorar -> variavel VIRGULA . monitorar
    (31) monitorar -> . variavel
    (32) monitorar -> . variavel VIRGULA monitorar

    variavel        shift and go to state 8

    monitorar                      shift and go to state 22

state 12

    (1) regra -> INICIO varlist MONITOR monitorar EXECUTE cmds . TERMINO

    TERMINO         shift and go to state 23


state 13

    (2) cmds -> cmd .
    (3) cmds -> cmd . cmds
    (2) cmds -> . cmd
    (3) cmds -> . cmd cmds
    (4) cmd -> . variavel IGUAL numero
    (5) cmd -> . variavel IGUAL variavel
    (6) cmd -> . funcao
    (7) cmd -> . IF condicao THEN cmds FIM
    (8) cmd -> . IF condicao THEN cmds ELSE cmds FIM
    (9) cmd -> . ENQUANTO condicao FACA cmds FIM
    (10) cmd -> . EVAL ABRE variavel VIRGULA variavel VIRGULA cmds FECHA
    (11) cmd -> . EVAL ABRE numero VIRGULA numero VIRGULA cmds FECHA
    (12) funcao -> . SOMA ABRE variavel VIRGULA variavel VIRGULA variavel FECHA
    (13) funcao -> . SOMA ABRE variavel VIRGULA numero VIRGULA variavel FECHA
    (14) funcao -> . SOMA ABRE numero VIRGULA variavel VIRGULA variavel FECHA
    (15) funcao -> . SOMA ABRE numero VIRGULA numero VIRGULA variavel FECHA
    (16) funcao -> . MULT ABRE numero VIRGULA numero VIRGULA variavel FECHA
    (17) funcao -> . MULT ABRE variavel VIRGULA variavel VIRGULA variavel FECHA
    (18) funcao -> . MULT ABRE variavel VIRGULA numero VIRGULA variavel FECHA
    (19) funcao -> . MULT ABRE numero VIRGULA variavel VIRGULA variavel FECHA
    (20) funcao -> . ZERO ABRE variavel FECHA

    TERMINO         reduce using rule 2 (cmds -> cmd .)
    FIM             reduce using rule 2 (cmds -> cmd .)
    ELSE            reduce using rule 2 (cmds -> cmd .)
    FECHA           reduce using rule 2 (cmds -> cmd .)
    variavel        shift and go to state 14
    IF              shift and go to state 16
    ENQUANTO        shift and go to state 17
    EVAL            shift and go to state 18
    SOMA            shift and go to state 19
    MULT            shift and go to state 20
    ZERO            shift and go to state 21

    cmd                            shift and go to state 13
    cmds                           shift and go to state 24
    funcao                         shift and go to state 15

state 14

    (4) cmd -> variavel . IGUAL numero
    (5) cmd -> variavel . IGUAL variavel

    IGUAL           shift and go to state 25


state 15

    (6) cmd -> funcao .

    variavel        reduce using rule 6 (cmd -> funcao .)
    IF              reduce using rule 6 (cmd -> funcao .)
    ENQUANTO        reduce using rule 6 (cmd -> funcao .)
    EVAL            reduce using rule 6 (cmd -> funcao .)
    SOMA            reduce using rule 6 (cmd -> funcao .)
    MULT            reduce using rule 6 (cmd -> funcao .)
    ZERO            reduce using rule 6 (cmd -> funcao .)
    TERMINO         reduce using rule 6 (cmd -> funcao .)
    FIM             reduce using rule 6 (cmd -> funcao .)
    ELSE            reduce using rule 6 (cmd -> funcao .)
    FECHA           reduce using rule 6 (cmd -> funcao .)


state 16

    (7) cmd -> IF . condicao THEN cmds FIM
    (8) cmd -> IF . condicao THEN cmds ELSE cmds FIM
    (21) condicao -> . numero MAIOR variavel
    (22) condicao -> . numero MENOR variavel
    (23) condicao -> . numero IGUAL IGUAL variavel
    (24) condicao -> . variavel IGUAL IGUAL variavel
    (25) condicao -> . variavel IGUAL IGUAL numero
    (26) condicao -> . variavel MAIOR variavel
    (27) condicao -> . variavel MENOR variavel
    (28) condicao -> . variavel MAIOR numero
    (29) condicao -> . variavel MENOR numero
    (30) condicao -> . variavel

    numero          shift and go to state 27
    variavel        shift and go to state 28

    condicao                       shift and go to state 26

state 17

    (9) cmd -> ENQUANTO . condicao FACA cmds FIM
    (21) condicao -> . numero MAIOR variavel
    (22) condicao -> . numero MENOR variavel
    (23) condicao -> . numero IGUAL IGUAL variavel
    (24) condicao -> . variavel IGUAL IGUAL variavel
    (25) condicao -> . variavel IGUAL IGUAL numero
    (26) condicao -> . variavel MAIOR variavel
    (27) condicao -> . variavel MENOR variavel
    (28) condicao -> . variavel MAIOR numero
    (29) condicao -> . variavel MENOR numero
    (30) condicao -> . variavel

    numero          shift and go to state 27
    variavel        shift and go to state 28

    condicao                       shift and go to state 29

state 18

    (10) cmd -> EVAL . ABRE variavel VIRGULA variavel VIRGULA cmds FECHA
    (11) cmd -> EVAL . ABRE numero VIRGULA numero VIRGULA cmds FECHA

    ABRE            shift and go to state 30


state 19

    (12) funcao -> SOMA . ABRE variavel VIRGULA variavel VIRGULA variavel FECHA
    (13) funcao -> SOMA . ABRE variavel VIRGULA numero VIRGULA variavel FECHA
    (14) funcao -> SOMA . ABRE numero VIRGULA variavel VIRGULA variavel FECHA
    (15) funcao -> SOMA . ABRE numero VIRGULA numero VIRGULA variavel FECHA

    ABRE            shift and go to state 31


state 20

    (16) funcao -> MULT . ABRE numero VIRGULA numero VIRGULA variavel FECHA
    (17) funcao -> MULT . ABRE variavel VIRGULA variavel VIRGULA variavel FECHA
    (18) funcao -> MULT . ABRE variavel VIRGULA numero VIRGULA variavel FECHA
    (19) funcao -> MULT . ABRE numero VIRGULA variavel VIRGULA variavel FECHA

    ABRE            shift and go to state 32


state 21

    (20) funcao -> ZERO . ABRE variavel FECHA

    ABRE            shift and go to state 33


state 22

    (32) monitorar -> variavel VIRGULA monitorar .

    EXECUTE         reduce using rule 32 (monitorar -> variavel VIRGULA monitorar .)


state 23

    (1) regra -> INICIO varlist MONITOR monitorar EXECUTE cmds TERMINO .

    $end            reduce using rule 1 (regra -> INICIO varlist MONITOR monitorar EXECUTE cmds TERMINO .)


state 24

    (3) cmds -> cmd cmds .

    TERMINO         reduce using rule 3 (cmds -> cmd cmds .)
    FIM             reduce using rule 3 (cmds -> cmd cmds .)
    ELSE            reduce using rule 3 (cmds -> cmd cmds .)
    FECHA           reduce using rule 3 (cmds -> cmd cmds .)


state 25

    (4) cmd -> variavel IGUAL . numero
    (5) cmd -> variavel IGUAL . variavel

    numero          shift and go to state 35
    variavel        shift and go to state 34


state 26

    (7) cmd -> IF condicao . THEN cmds FIM
    (8) cmd -> IF condicao . THEN cmds ELSE cmds FIM

    THEN            shift and go to state 36


state 27

    (21) condicao -> numero . MAIOR variavel
    (22) condicao -> numero . MENOR variavel
    (23) condicao -> numero . IGUAL IGUAL variavel

    MAIOR           shift and go to state 37
    MENOR           shift and go to state 38
    IGUAL           shift and go to state 39


state 28

    (24) condicao -> variavel . IGUAL IGUAL variavel
    (25) condicao -> variavel . IGUAL IGUAL numero
    (26) condicao -> variavel . MAIOR variavel
    (27) condicao -> variavel . MENOR variavel
    (28) condicao -> variavel . MAIOR numero
    (29) condicao -> variavel . MENOR numero
    (30) condicao -> variavel .

    IGUAL           shift and go to state 40
    MAIOR           shift and go to state 41
    MENOR           shift and go to state 42
    THEN            reduce using rule 30 (condicao -> variavel .)
    FACA            reduce using rule 30 (condicao -> variavel .)


state 29

    (9) cmd -> ENQUANTO condicao . FACA cmds FIM

    FACA            shift and go to state 43


state 30

    (10) cmd -> EVAL ABRE . variavel VIRGULA variavel VIRGULA cmds FECHA
    (11) cmd -> EVAL ABRE . numero VIRGULA numero VIRGULA cmds FECHA

    variavel        shift and go to state 44
    numero          shift and go to state 45


state 31

    (12) funcao -> SOMA ABRE . variavel VIRGULA variavel VIRGULA variavel FECHA
    (13) funcao -> SOMA ABRE . variavel VIRGULA numero VIRGULA variavel FECHA
    (14) funcao -> SOMA ABRE . numero VIRGULA variavel VIRGULA variavel FECHA
    (15) funcao -> SOMA ABRE . numero VIRGULA numero VIRGULA variavel FECHA

    variavel        shift and go to state 46
    numero          shift and go to state 47


state 32

    (16) funcao -> MULT ABRE . numero VIRGULA numero VIRGULA variavel FECHA
    (17) funcao -> MULT ABRE . variavel VIRGULA variavel VIRGULA variavel FECHA
    (18) funcao -> MULT ABRE . variavel VIRGULA numero VIRGULA variavel FECHA
    (19) funcao -> MULT ABRE . numero VIRGULA variavel VIRGULA variavel FECHA

    numero          shift and go to state 48
    variavel        shift and go to state 49


state 33

    (20) funcao -> ZERO ABRE . variavel FECHA

    variavel        shift and go to state 50


state 34

    (5) cmd -> variavel IGUAL variavel .

    variavel        reduce using rule 5 (cmd -> variavel IGUAL variavel .)
    IF              reduce using rule 5 (cmd -> variavel IGUAL variavel .)
    ENQUANTO        reduce using rule 5 (cmd -> variavel IGUAL variavel .)
    EVAL            reduce using rule 5 (cmd -> variavel IGUAL variavel .)
    SOMA            reduce using rule 5 (cmd -> variavel IGUAL variavel .)
    MULT            reduce using rule 5 (cmd -> variavel IGUAL variavel .)
    ZERO            reduce using rule 5 (cmd -> variavel IGUAL variavel .)
    TERMINO         reduce using rule 5 (cmd -> variavel IGUAL variavel .)
    FIM             reduce using rule 5 (cmd -> variavel IGUAL variavel .)
    ELSE            reduce using rule 5 (cmd -> variavel IGUAL variavel .)
    FECHA           reduce using rule 5 (cmd -> variavel IGUAL variavel .)


state 35

    (4) cmd -> variavel IGUAL numero .

    variavel        reduce using rule 4 (cmd -> variavel IGUAL numero .)
    IF              reduce using rule 4 (cmd -> variavel IGUAL numero .)
    ENQUANTO        reduce using rule 4 (cmd -> variavel IGUAL numero .)
    EVAL            reduce using rule 4 (cmd -> variavel IGUAL numero .)
    SOMA            reduce using rule 4 (cmd -> variavel IGUAL numero .)
    MULT            reduce using rule 4 (cmd -> variavel IGUAL numero .)
    ZERO            reduce using rule 4 (cmd -> variavel IGUAL numero .)
    TERMINO         reduce using rule 4 (cmd -> variavel IGUAL numero .)
    FIM             reduce using rule 4 (cmd -> variavel IGUAL numero .)
    ELSE            reduce using rule 4 (cmd -> variavel IGUAL numero .)
    FECHA           reduce using rule 4 (cmd -> variavel IGUAL numero .)


state 36

    (7) cmd -> IF condicao THEN . cmds FIM
    (8) cmd -> IF condicao THEN . cmds ELSE cmds FIM
    (2) cmds -> . cmd
    (3) cmds -> . cmd cmds
    (4) cmd -> . variavel IGUAL numero
    (5) cmd -> . variavel IGUAL variavel
    (6) cmd -> . funcao
    (7) cmd -> . IF condicao THEN cmds FIM
    (8) cmd -> . IF condicao THEN cmds ELSE cmds FIM
    (9) cmd -> . ENQUANTO condicao FACA cmds FIM
    (10) cmd -> . EVAL ABRE variavel VIRGULA variavel VIRGULA cmds FECHA
    (11) cmd -> . EVAL ABRE numero VIRGULA numero VIRGULA cmds FECHA
    (12) funcao -> . SOMA ABRE variavel VIRGULA variavel VIRGULA variavel FECHA
    (13) funcao -> . SOMA ABRE variavel VIRGULA numero VIRGULA variavel FECHA
    (14) funcao -> . SOMA ABRE numero VIRGULA variavel VIRGULA variavel FECHA
    (15) funcao -> . SOMA ABRE numero VIRGULA numero VIRGULA variavel FECHA
    (16) funcao -> . MULT ABRE numero VIRGULA numero VIRGULA variavel FECHA
    (17) funcao -> . MULT ABRE variavel VIRGULA variavel VIRGULA variavel FECHA
    (18) funcao -> . MULT ABRE variavel VIRGULA numero VIRGULA variavel FECHA
    (19) funcao -> . MULT ABRE numero VIRGULA variavel VIRGULA variavel FECHA
    (20) funcao -> . ZERO ABRE variavel FECHA

    variavel        shift and go to state 14
    IF              shift and go to state 16
    ENQUANTO        shift and go to state 17
    EVAL            shift and go to state 18
    SOMA            shift and go to state 19
    MULT            shift and go to state 20
    ZERO            shift and go to state 21

    cmds                           shift and go to state 51
    cmd                            shift and go to state 13
    funcao                         shift and go to state 15

state 37

    (21) condicao -> numero MAIOR . variavel

    variavel        shift and go to state 52


state 38

    (22) condicao -> numero MENOR . variavel

    variavel        shift and go to state 53


state 39

    (23) condicao -> numero IGUAL . IGUAL variavel

    IGUAL           shift and go to state 54


state 40

    (24) condicao -> variavel IGUAL . IGUAL variavel
    (25) condicao -> variavel IGUAL . IGUAL numero

    IGUAL           shift and go to state 55


state 41

    (26) condicao -> variavel MAIOR . variavel
    (28) condicao -> variavel MAIOR . numero

    variavel        shift and go to state 56
    numero          shift and go to state 57


state 42

    (27) condicao -> variavel MENOR . variavel
    (29) condicao -> variavel MENOR . numero

    variavel        shift and go to state 58
    numero          shift and go to state 59


state 43

    (9) cmd -> ENQUANTO condicao FACA . cmds FIM
    (2) cmds -> . cmd
    (3) cmds -> . cmd cmds
    (4) cmd -> . variavel IGUAL numero
    (5) cmd -> . variavel IGUAL variavel
    (6) cmd -> . funcao
    (7) cmd -> . IF condicao THEN cmds FIM
    (8) cmd -> . IF condicao THEN cmds ELSE cmds FIM
    (9) cmd -> . ENQUANTO condicao FACA cmds FIM
    (10) cmd -> . EVAL ABRE variavel VIRGULA variavel VIRGULA cmds FECHA
    (11) cmd -> . EVAL ABRE numero VIRGULA numero VIRGULA cmds FECHA
    (12) funcao -> . SOMA ABRE variavel VIRGULA variavel VIRGULA variavel FECHA
    (13) funcao -> . SOMA ABRE variavel VIRGULA numero VIRGULA variavel FECHA
    (14) funcao -> . SOMA ABRE numero VIRGULA variavel VIRGULA variavel FECHA
    (15) funcao -> . SOMA ABRE numero VIRGULA numero VIRGULA variavel FECHA
    (16) funcao -> . MULT ABRE numero VIRGULA numero VIRGULA variavel FECHA
    (17) funcao -> . MULT ABRE variavel VIRGULA variavel VIRGULA variavel FECHA
    (18) funcao -> . MULT ABRE variavel VIRGULA numero VIRGULA variavel FECHA
    (19) funcao -> . MULT ABRE numero VIRGULA variavel VIRGULA variavel FECHA
    (20) funcao -> . ZERO ABRE variavel FECHA
